# chanjo2

./: .bumpversion.cfg  .env  .env_template  .gitignore  404.html  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile-api  Dockerfile-db  README.md  SECURITY.md  codecov.yml  docker-compose-mysql.yml  docker-compose.yml  environment.yml  gunicorn.conf.py  index.html  init.sql  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml  template.env  test.db
.github/workflows/: black.yml  build_and_push_docker_stage.yml  build_docker_image_on_push.yml  build_docker_image_on_release.yml  build_docker_on_push.yml  bumpversion.yml  bumpversion_on_merge_main.yml  docker_build_on_release.yml  mkdocs_publishing.yml  pypi_build_and_publish.yml  tests.yml  tests_n_coverage.yml  vulture.yml  woke.yml
demo/: hg002_panelapp_109.d4
deployment/docker-deployment/: index.html
deployment/env_file/: index.html
deployment/installation/: index.html
docs/: index.md
docs/deployment/: docker-deployment.md  env_file.md  installation.md
docs/usage/: authorised_requests.md  coverage-reports.md  data-loading.md  interval-queries.md  loading-intervals.md  loading-samples.md  quick-coverage.md  sample-coverage.md
search/: search_index.json
src/chanjo2/: __init__.py  auth.py  constants.py  database.db  dbutil.py  decorators.py  dependencies.py  logger.py  main.py  populate_demo.py  security.py
src/chanjo2/crud/: cases.py  intervals.py  samples.py  tags.py
src/chanjo2/demo/: 109_green.bed  __init__.py  populate_demo.py
src/chanjo2/endpoints/: auth.py  cases.py  coverage.py  individuals.py  intervals.py  overview.py  regions.py  report.py  samples.py
src/chanjo2/meta/: __init__.py  handle_bed.py  handle_completeness_stats.py  handle_completeness_tasks.py  handle_coverage_stats.py  handle_d4.py  handle_load_intervals.py  handle_overview_content.py  handle_report_contents.py  handle_tasks.py  utils.py
src/chanjo2/models/: __init__.py  coverage_interval.py  individuals.py  pydantic_models.py  regions.py  sql_models.py
src/chanjo2/resources/: XY_exons_GRCh37_noPAR.bed  XY_transcripts_GRCh38_noPAR.bed  __init__.py  chrXY_exons_GRCh37.bed  chrXY_exons_GRCh37_noPAR.bed  chrXY_exons_GRCh38.bed  chrXY_exons_GRCh38_noPAR.bed  chrXY_transcripts_GRCh37.bed  chrXY_transcripts_GRCh37_noPAR.bed  chrXY_transcripts_GRCh38.bed  chrXY_transcripts_GRCh38_noPAR.bed  chrX_exons_GRCh37.bed  chrX_exons_GRCh38.bed  chrX_transcripts_GRCh37.bed  (+6 more)
tests/: conftest.py  test_chanjo2.py
usage/authorised_requests/: index.html
usage/coverage-reports/: index.html
usage/loading-intervals/: index.html
usage/loading-samples/: index.html
usage/sample-coverage/: index.html
(+33 files in other folders)
