[tool.poetry]
name = "chanjo2"
version = "1.3.0"
description = "Next generation coverage analysis"
authors = ["northwestwitch <chiara.rasi@scilifelab.se>"]

[tool.poetry_bumpversion.file."src/chanjo2/__init__.py"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
python-multipart = "^0.0.5"
mysqlclient = "^2.1.0"
gunicorn = "^20.1.0"
requests = "^2.28.2"
pytest-cov = "^4.0.0"
validators = "^0.20.0"
pytest-mock = "^3.10.0"
uvicorn = "^0.21.1"
pyd4 = "0.3.6.2"
python-dotenv = "^1.0.0"
mkdocs = "^1.4.3"
jinja2 = "==3.0.3"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
schug = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.extras]
m1 = ["pyd4"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
