[tool.poetry]
name = "chanjo2"
version = "3.3.1"
description = "Next generation coverage analysis"
authors = ["northwestwitch <chiara.rasi@scilifelab.se>"]

[tool.poetry_bumpversion.file."src/chanjo2/__init__.py"]

[tool.poetry.dependencies]
python = "^3.9"
mysqlclient = "^2.1.0"
requests = "^2.28.2"
pytest-cov = "^4.0.0"
validators = "^0.20.0"
pytest-mock = "^3.10.0"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
mkdocs = "^1.4.3"
jinja2 = "3.1.4"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
cryptography = ">=42.0.8,<44.0.0"
gunicorn = "22"
python-multipart = "^0.0.9"
certifi = "^2024.7.4"
pytest = "7.4.4"
coloredlogs = "^15.0.1"
schug = "^1.10.0"
tqdm = "^4.67.1"

[tool.poetry.extras]
m1 = ["pyd4"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
