[tool.poetry]
name = "chanjo2"
version = "3.11.1"
description = "Next generation coverage analysis"
authors = ["northwestwitch <chiara.rasi@scilifelab.se>"]

[tool.poetry_bumpversion.file."src/chanjo2/__init__.py"]

[tool.poetry.dependencies]
python = "^3.10"
mysqlclient = "^2.1.0"
requests = "^2.28.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
mkdocs = "^1.4.3"
jinja2 = "3.1.6"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
cryptography = ">=42.0.8,<44.0.0"
gunicorn = "23.0.0"
certifi = "^2024.7.4"
coloredlogs = "^15.0.1"
tqdm = "^4.67.1"
python-multipart = "^0.0.20"
validators = "^0.34.0"
pytest = "7.4.4"
fastapi = "^0.121.0"
importlib-resources = "^6.5.2"
httpx = "^0.28.1"
python-jose = {version = "^3.5.0", extras = ["cryptography"]}
respx = "^0.22.0"
starlette = ">=0.49.1"

[tool.poetry.extras]
m1 = ["pyd4"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"